--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "express": "^4.21.0",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "killable": "^1.0.1",
     "socket.io": "^4.7.0",
     "twilio": "^4.19.3"
