--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "killable": "^1.0.1",
+    "nodemon": "^3.1.10",
     "socket.io": "^4.7.0",
     "twilio": "^4.19.3"
   }
